--- a/style.css
+++ b/style.css
@@ -1,32 +1,58 @@
-.banner1{
-    position: relative;
-    margin: auto;
+body{
+    font-family: 'Merriweather', serif;
 }
-.banner1 img{
-    max-width: 100%;
+.banner1{
+    /* position: relative; */
     margin: auto;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
+    background-image: url(resources/Banner\ Image.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 700px;
+    width: 1600px;
     display: block;
-    
+    align-items: center;
+    margin-top: 40px;
+    border-radius: 20px;
 }
 .textarea{
-    position: absolute;
-    color: aliceblue;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%,-50%);
-   text-align: center;
-   
+  text-align: center;
+  color: rgb(255, 254, 254);
+  padding-top: 150px;
 }
 .newy{
-    font-size: 25px;
+    font-size: 35px;
 }
 .newy2{
-    font-size: 60px;
+    font-size: 80px;
 }
 .section{
     margin-top: 120px;
     text-align: center;
+}
+.text{
+    color: red;
+    font-size: 60px;
+}
+.text2{
+    color: red;
+}
+.title{
+    font-size: 40px;
+}
+.img2{
+    width: 800px;
+    height: 500px;
+    display: block;
+    margin: auto;
+}
+.content2{
+    background-image: url(resources/Vectorrr.png);
+    margin: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px;
+    width: 1600px;
+    display: block;
+    align-items: center;
+    border-radius: 20px;
 }
