--- a/style.css
+++ b/style.css
@@ -85,3 +85,21 @@ margin-top: 120px;
     width: 300px;
     padding-top: 20px;
 }
+.date{
+    /* background: white linear-gradient(to top rgba(255, 0, 0, 1), rgba(255, 0, 0, 0));
+    height: 500px; */
+    height: 500px;
+    width: 1600px;
+    background-color: rgb(255, 255, 255);
+    background-image: linear-gradient(rgb(248, 201, 201), rgba(146, 89, 89, 0));
+    align-items: center;
+    margin: auto;
+    margin-top: 150px;
+    border-radius: 30px;
+}
+.time{
+    text-align: center;
+    font-size: 40px;
+    padding-top: 70px;
+    font-family: sans-serif;
+}
