--- a/style.css
+++ b/style.css
@@ -103,3 +103,20 @@ margin-top: 120px;
     padding-top: 70px;
     font-family: sans-serif;
 }
+.content3{
+    display: flex;
+    margin: auto;
+    margin-top: 200px;
+    gap: 80px;
+    padding: 0 40px;
+    align-items: center;
+    background-size: cover;
+    height: 700px;
+    width: 1600px;
+}
+.content-4{
+    padding-left: 30px;
+}
+.dolor{
+    padding-left: 40px;
+}
