--- a/style.css
+++ b/style.css
@@ -120,3 +120,21 @@ margin-top: 120px;
 .dolor{
     padding-left: 40px;
 }
+.content-5{
+    margin: auto;
+    align-items: center;
+    width: 1600px;
+    height: 7500px;
+    display: block;
+}
+.moye{
+    text-align: center;
+}
+.fly{
+    display: flex;
+    background-image: url(resources/Rectangle\ 2.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    padding-left: 140px;
+    gap: 122px;
+}
