--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@ body{
 margin-top: 120px;
     text-align: center;
     margin: auto;
+    background-color: rgb(255, 255, 255);
+    width: 1600px;
+    height: auto;
 }
 .text{
     color: red;
@@ -93,8 +96,7 @@ margin-top: 120px;
     padding-top: 20px;
 }
 .date{
-    /* background: white linear-gradient(to top rgba(255, 0, 0, 1), rgba(255, 0, 0, 0));
-    height: 500px; */
+    
     height: 500px;
     width: 1600px;
     background-color: rgb(255, 255, 255);
@@ -201,6 +203,8 @@ height: auto;
     color: aliceblue;
     margin: auto;
     margin-top: 140px;
+    max-width: 1900px;
+    height: auto;
 }
 .foot{
     display: flex;
